<resources>
    <string name="app_name">PillBox</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">SIGN IN</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="connect_with">OR SIGN IN WITH</string>
    <string name="signup_with">OR SIGN UP WITH</string>
    <string name="signup">SIGN UP</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>

    <!--font awesome icons-->
    <string name="text_google">&#xf1a0;</string>
    <string name="text_facebook">&#xf39e;</string>
    <string name="text_twitter">&#xf099;</string>
    <string name="cancel">"Cancel"</string>
    <string name="reset">Reset</string>
    <string name="createaccount">Register an account</string>
    <string name="line"> | </string>
    <string name="medication">Medication</string>
    <string name="addmedic">Add Medication</string>
    <string name="vitals">Add Vitals</string>
    <string name="adddoc">Add Doctor Appointment</string>
    <string name="medicationname">Medication Name</string>
    <string name="description">Description</string>
    <string name="freq">Frequency</string>
    <string name="start">Start Date</string>
    <string name="end">End Date</string>
    <string name="reminder">Set Reminder</string>
    <string name="doctor">Prescribing Doctor</string>
    <string name="instruction">Instruction</string>
    <string name="dosage">Dosage</string>
    <string name="menu_item1">Add Med</string>
    <string name="pickImage">Select Medication Icon</string>
    <string name="okay">OK</string>
    <string name="starttime">Start Time</string>
    <string name="endtime">End Time</string>


    <string name="edit_medication">Edit Medication</string>
    <string name="medication_details">Medication Details</string>
    <string name="full_medication_rooster">Full medication rooster</string>
    <string name="delete_pill">Delete Pill</string>
    <string name="delete_message">Are you sure you want to delete this pill?</string>
    <string name="dismiss_message">No, Dismiss</string>
    <string name="positive_message">Yes, I\'m Sure</string>
    <string name="delete_medication">Delete Medication</string>
    <string name="medical_profile">Medical Profile</string>
    <string name="main_notification_channel_name">PillBox Notification</string>

</resources>
