<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@android:color/white"
    app:cardCornerRadius="@dimen/spacing_medium"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/spacing_mlarge">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/icon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:tint="@android:color/white"
                android:src="@drawable/ic_phonelink_lock_black_24dp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="@dimen/spacing_large">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:textColor="@android:color/black"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"/>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.TextInputLayout"
                app:elevation="5dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forgotpassword_text_view"
                    style="@style/Widget.TextEdit"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/spacing_medium"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_weight="1"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/cancel_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancel"
                app:strokeColor="@android:color/white"
                android:textColor="@color/colorPrimary" />

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/reset_button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:strokeColor="@android:color/white"
                android:gravity="center"
                android:text="@string/reset"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

</LinearLayout>
</androidx.cardview.widget.CardView>
